--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,6 @@
+parameters:
+    netgen_remote_media.provider: netgen_remote_media.remote_media.cloudinary
+
 services:
     ezpublish.fieldType.ngremotemedia:
         class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\Type
