--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -3,32 +3,32 @@ netgen_remote_media_upload:
     defaults: { _controller: NetgenRemoteMediaBundle:UI:uploadFile }
 
 netgen_remote_media_fetch:
-    path: /ezexceed/ngremotemedia/fetch/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/fetch/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:fetchTest }
 
 netgen_remote_media_fetch_test:
-    path: /ezexceed/ngremotemedia/fetch/test/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/fetch/test/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:fetchTest }
 
 netgen_remote_media_save:
-    path: /ezexceed/ngremotemedia/save/{objectId}/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/save/{objectId}/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:saveAttributeTest }
 
 netgen_remote_media_save_test:
-    path: /ezexceed/ngremotemedia/save/test/{objectId}/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/save/test/{objectId}/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:saveAttributeTest }
 
 netgen_remote_media_browse:
-    path: /ezexceed/ngremotemedia/browse/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/browse/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:browseRemoteMedia }
 
 netgen_remote_media_add_tag:
-    path: /ezexceed/ngremotemedia/tags/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/tags/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:addTags }
     methods: [POST]
 
 netgen_remote_media_remove_tag:
-    path: /ezexceed/ngremotemedia/tags/{attributeId}/{contentVersionId}
+    path: /ezexceed/ngremotemedia/tags/{fieldId}/{contentVersionId}
     defaults: { _controller: NetgenRemoteMediaBundle:UI:removeTags }
     methods: [DELETE]
 
