--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -17,5 +17,6 @@ services:
     netgen_remote_media.helper:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Helper
         arguments:
-            - "@ezpublish.api.storage_engine.legacy.handler.ngremotemedia"
             - "@netgen_remote_media.remote_media.provider"
+            - "@ezpublish.api.service.content"
+            - "@ezpublish.api.service.content_type"
