--- a/Resources/config/fieldtypes.yml
+++ b/Resources/config/fieldtypes.yml
@@ -18,3 +18,7 @@ services:
         tags:
             - {name: ezpublish.fieldType.externalStorageHandler, alias: ngremotemedia}
 
+    netgen_remote_media.templating.converter.ngremotemedia:
+        class: Netgen\Bundle\RemoteMediaBundle\Templating\Converter\RemoteMediaValueConverter
+        tags:
+            - {name: ezpublish_legacy.templating.converter, for: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\Value}
