--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,6 +8,10 @@ services:
             - "@netgen_remote_media.remote_media.provider"
             - "@netgen_remote_media.helper"
             - "@templating"
+            - "@ezpublish.api.repository"
+        calls:
+            - [setAnonymousUserId, ["$anonymous_user_id$"]]
+            - [setBrowseLimit, ["$ezexceed.browse_limit;netgen_remote_media$"]]
 
     netgen_remote_media.remote_media.cloudinary:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Provider\CloudinaryProvider
