--- a/Resources/config/fieldtypes.yml
+++ b/Resources/config/fieldtypes.yml
@@ -11,7 +11,7 @@ services:
             - {name: ezpublish.storageEngine.legacy.converter, alias: ngremotemedia}
 
     ezpublish.fieldType.ngremotemedia.externalStorage:
-        class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\RemoteMediaStorage\CloudinaryStorage
+        class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\RemoteMediaStorage\RemoteMediaStorage
         arguments:
             - "@ezpublish.api.service.content"
             - "@netgen_remote_media.remote_media.provider"
