--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -9,6 +9,8 @@ services:
             - "@netgen_remote_media.helper"
             - "@templating"
             - "@ezpublish.api.repository"
+            - "@ezpublish.config.resolver"
+            - "@security.authorization_checker"
         calls:
             - [setAnonymousUserId, ["$anonymous_user_id$"]]
             - [setBrowseLimit, ["$ezexceed.browse_limit;netgen_remote_media$"]]
