--- a/Resources/config/fieldtypes.yml
+++ b/Resources/config/fieldtypes.yml
@@ -14,9 +14,9 @@ services:
         class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\RemoteMediaStorage
         arguments:
             - "@ezpublish.api.service.content"
-            - "@netgen_remote_media.remote_media.provider"
+            - "@netgen_remote_media.provider"
         calls:
-            - [setDeleteUnused, ["remove_unused;netgen_remote_media$"]]
+            - [setDeleteUnused, ["netgen_remote_media.remove_unused_resources"]]
         tags:
             - {name: ezpublish.fieldType.externalStorageHandler, alias: ngremotemedia}
 
