--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -2,7 +2,7 @@ services:
     netgen_remote_media.templating.twig.extension:
         class: Netgen\Bundle\RemoteMediaBundle\Templating\Twig\Extension\NetgenRemoteMediaExtension
         arguments:
-            - "@netgen_remote_media.remote_media.provider"
+            - "@netgen_remote_media.provider"
             - "@ezpublish.translation_helper"
         tags:
             - { name: twig.extension }
