--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -33,10 +33,8 @@ netgen_remote_media_legacy_save:
     defaults: { _controller: netgen_remote_media.controller.ui:saveAttributeLegacyAction }
 
 netgen_remote_media_fetch_remote:
-    path: /ngremotemedia/simple_fetch/{resourceId}
+    path: /ngremotemedia/simple_fetch
     defaults: { _controller: netgen_remote_media.controller.ui:fetchRemoteAction }
-    requirements:
-        resourceId: .+
 
 netgen_remote_media_generate_variation:
     path: /ngremotemedia/generate
