--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,8 @@
+parameters:
+    netgen_remote_media.default.cloudinary.folder_name: 'default'
+    netgen_remote_media.default.cloudinary.unique_id: false
+    netgen_remote_media.default.cloudinary.use_upscaling: true
+
 services:
     netgen_remote_media.controller.ui:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\UIController
@@ -20,6 +25,10 @@ services:
             - "%netgen_remote_media.parameters.cloudinary.account_name%"
             - "%netgen_remote_media.parameters.cloudinary.account_key%"
             - "%netgen_remote_media.parameters.cloudinary.account_secret%"
+        calls:
+            - [setFolderName, ["$cloudinary.folder_name;netgen_remote_media$"]]
+            - [setUniqueFilename, ["$cloudinary.unique_id;netgen_remote_media$"]]
+            - [setUseUpscaling, ["$cloudinary.use_upscaling;netgen_remote_media$"]]
 
     netgen_remote_media.helper:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Helper
