Javascript: Add prefix Ng to all RemoteMedia* variables

--- a/ezpublish_legacy/ngremotemedia/.jshintrc
+++ b/ezpublish_legacy/ngremotemedia/.jshintrc
@@ -11,13 +11,12 @@
         "jQuery": true,
         "$": true,
         "JST": true,
-        "RemoteMediaShared": true,
-        "RemoteMediaTranslations": true,
+        "NgRemoteMediaShared": true,
+        "NgRemoteMediaTranslations": true,
         "tinymce": true,
         "define": true,
         "eZExceed": true,
         "Backbone": true,
-        "RemoteMedia": true,
         "Handlebars": true,
         "_": true
     }
