Add twig helper for fetching configured formats

--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -4,5 +4,6 @@ services:
         arguments:
             - "@netgen_remote_media.provider"
             - "@ezpublish.translation_helper"
+            - "@netgen_remote_media.helper"
         tags:
             - { name: twig.extension }
