--- a/Resources/config/fieldtypes.yml
+++ b/Resources/config/fieldtypes.yml
@@ -29,3 +29,8 @@ services:
         class: Netgen\Bundle\RemoteMediaBundle\Templating\Converter\RemoteMediaValueConverter
         tags:
             - {name: ezpublish_legacy.templating.converter, for: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\Value}
+
+    ezpublish.fieldType.indexable.netgen_remote_media:
+        class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\SearchField
+        tags:
+            - {name: ezpublish.fieldType.indexable, alias: ngremotemedia}
