--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    netgen_remote_media.default.cloudinary.folder_name: 'default'
+    netgen_remote_media.default.cloudinary.folder_name: ''
     netgen_remote_media.default.cloudinary.unique_id: false
     netgen_remote_media.default.cloudinary.use_upscaling: true
 
