--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
     netgen_remote_media.default.cloudinary.folder_name: ''
     netgen_remote_media.default.cloudinary.unique_id: false
     netgen_remote_media.default.cloudinary.use_upscaling: true
+    netgen_remote_media.default.use_content_version_as_part_of_filename: true
 
 services:
     netgen_remote_media.controller.ui:
@@ -36,3 +37,5 @@ services:
             - "@netgen_remote_media.provider"
             - "@ezpublish.api.service.content"
             - "@ezpublish.api.service.content_type"
+        calls:
+            - [setContentVersionInFileName, ["$use_content_version_as_part_of_filename;netgen_remote_media$"]]
