--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -23,6 +23,12 @@ services:
             - [setEzoeVariationList, ["%netgen_remote_media.ezoe.variation_list%"]]
             - [setEzoeClassList, ["%netgen_remote_media.ezoe.class_list%"]]
 
+    netgen_remote_media.variation.resolver:
+        class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\VariationResolver
+        calls:
+            - [setVariations, ["$image_variations;netgen_remote_media$"]]
+
+
     netgen_remote_media.provider.cloudinary:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Provider\Cloudinary\CloudinaryProvider
         arguments:
@@ -34,7 +40,6 @@ services:
         calls:
             - [setFolderName, ["$cloudinary.folder_name;netgen_remote_media$"]]
             - [setUniqueFilename, ["$cloudinary.unique_id;netgen_remote_media$"]]
-            - [setTransformations, ["$image_variations;netgen_remote_media$"]]
 
     netgen_remote_media.helper:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Helper
