--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
     #netgen_remote_media.default.cloudinary.folder_name: ''
+    netgen_remote_media.cloudinary.delete_not_used: true
 
 services:
     netgen_remote_media.handler_registry:
