--- a/Resources/config/fieldtypes.yml
+++ b/Resources/config/fieldtypes.yml
@@ -17,7 +17,7 @@ services:
             - "@netgen_remote_media.provider"
             - "@ezpublish.api.service.field_type"
         calls:
-            - [setDeleteUnused, ["netgen_remote_media.remove_unused_resources"]]
+            - [setDeleteUnused, ["%netgen_remote_media.cloudinary.delete_not_used%"]]
         tags:
             - {name: ezpublish.fieldType.externalStorageHandler, alias: ngremotemedia}
 
