Set variations resolver service to lazy

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,6 +8,7 @@ services:
 
     netgen_remote_media.variation.resolver:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\VariationResolver
+        lazy: true
         calls:
             - [setVariations, ["$image_variations;netgen_remote_media$"]]
 
