--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "cloudinary/cloudinary_php": "~1.2.0"
     },
     "require-dev": {
+        "matthiasnoback/symfony-config-test": "~2.0",
+        "matthiasnoback/symfony-dependency-injection-test": "~1.0",
         "phpunit/phpunit": "^5.7"
     },
     "target-dir": "Netgen/Bundle/RemoteMediaBundle",
     "autoload": {
         "psr-0": { "Netgen\\Bundle\\RemoteMediaBundle": "" }
-  }
+    }
 }
